# note-memory

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/src/mapping_memory/: ai.py  ask.py  assistant_context.py  categories_api.py  category_scope.py  chat.py  chat_summary.py  chat_title.py  chunking.py  db.py  embeddings.py  exact_search.py  fts.py  groq_ai.py  main.py  markdown_notes.py  memory.py  memory_api.py  notes.py  notes_api.py  provider_fingerprint.py  rag.py  reindex.py  retrieval_index.py  schemas.py  search.py  settings.py  vault_sync.py  vector_store.py  voyage_embeddings.py  voyage_reranker.py
backend/tests/: conftest.py  test_ai.py  test_app_lifecycle.py  test_ask_api.py  test_assistant_context.py  test_categories_api.py  test_chat.py  test_chat_summary.py  test_chat_title.py  test_chunking.py  test_db.py  test_embeddings.py  test_exact_search.py  test_groq_ai.py  test_health.py  test_markdown_notes.py  test_memory.py  test_notes.py  test_notes_api.py  test_package.py  test_provider_fingerprint.py  test_provider_migration.py  test_rag.py  test_reindex.py  test_retrieval_index.py  test_schemas.py  test_search_api.py  test_settings.py  test_vault_sync.py  test_vector_store.py  test_voyage_reranker.py
data/: mapping_memory.sqlite.pre-slice-04-20260721T220455Z.bak
data/vault/: .gitkeep  ai-exact-text-title-5.md  ai-route-labels-6.md  api-note-title-7.md  competition-import-issue-8.md  corrected-title-9.md  daily-log-for-note-memory-app-progress-and-testing-2026-07-05-4.md  econom-a-b-sica-precios-incentivos-monopolios-y-planificaci-n-central-3.md  exact-only-10.md  excluded-source-note-11.md  fallback-api-title-12.md  first-note-13.md  git-basics-setup-ssh-key-and-common-commands-1.md  git-programming-1.md  included-source-note-14.md  indexing-failure-title-15.md  keep-api-note-16.md  loose-note-17.md  matching-note-19.md  merged-20.md  missing-key-title-21.md  newer-api-note-22.md  older-api-note-23.md  one-api-note-24.md  original-body-25.md  original-body-26.md  original-body-27.md  regional-routing-28.md  reindexed-title-29.md  saved-despite-reindex-failure-30.md  second-note-31.md  selected-note-32.md  semantic-only-33.md  semantic-project-source-34.md  shared-keyword-cd-30954-categorized-36.md  shared-keyword-cd-30954-uncategorized-38.md  stable-title-39.md  tocantinense-source-rebuild-40.md  unselected-note-41.md  unselected-same-category-42.md  (+2 more)
docs/: architecture.md  project-memory.yaml
docs/superpowers/plans/: 2026-07-18-groq-voyage-provider-migration.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: markdown-layout.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  askScope.ts  dateFormat.ts  style.css  types.ts
frontend/src/components/: AddNote.test.tsx  AddNote.tsx  AskChat.test.tsx  AskChat.tsx  AskPanel.tsx  CommandCenter.tsx  MarkdownEditor.tsx  MarkdownPageSurface.tsx  MarkdownPane.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  MemoryManager.test.tsx  MemoryManager.tsx  NoteCard.tsx  NoteDetail.test.tsx  NoteDetail.tsx  NoteToolbar.tsx  NoteWorkspace.tsx  ResultPanel.tsx  SearchBar.tsx  SegmentedControl.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  ThemeMenu.test.tsx  ThemeMenu.tsx  ThemeToggle.tsx  themes.ts
frontend/src/editor/: categoryCompletion.test.ts  categoryCompletion.ts  frontmatterPreview.test.ts  frontmatterPreview.ts  markdownCodeLanguages.test.ts  (+5 more)
scripts/: check.ps1  check.sh  fix.ps1  fix.sh  run.ps1  run.sh
(+23 files in other folders)
