[project]
name = "mapping-memory-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Nunez", email = "44225495+r3k4ce@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "groq>=0.37.1",
    "langchain-voyageai>=0.4.0",
    "voyageai>=0.3.5",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "uvicorn>=0.49.0",
    "mem0ai==2.0.11",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PT", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["src", "tests"]
exclude = [
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "**/__pycache__",
    "**/*.egg-info"
]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov --cov-report=term-missing:skip-covered --cov-report=xml"
testpaths = ["tests"]
markers = ["live: opt-in tests that call configured external providers"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [".venv/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
[tool.uv.build-backend]
module-name = "mapping_memory"
